--- a/Pikovets_HW_1_Linear_Algebra.ipynb
+++ b/Pikovets_HW_1_Linear_Algebra.ipynb
@@ -6,8 +6,7 @@
       "provenance": [],
       "collapsed_sections": [
         "yWK8WGt7uhHj",
-        "757yStqGvCrq",
-        "mRCwVa66y_im"
+        "757yStqGvCrq"
       ],
       "include_colab_link": true
     },
@@ -153,15 +152,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ToDqy7-4wB-W"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Task 3\n",
@@ -300,13 +290,6 @@
       ],
       "metadata": {
         "id": "LYFiJg-ZG1r1"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "gfk3xdge49hX"
       }
     },
     {
